--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>📁 CSS Animation Labs</h1>
         <a href="lab1/index.html">Lab 1</a>
         <a href="lab2/index.html">Lab 2</a>
-        <a href="lab3/">Lab 3</a>
+        <a href="lab3/index.html">Lab 3</a>
         <a href="lab4/">Lab 4</a>
     </div>
 
