--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="lab1/index.html">Lab 1</a>
         <a href="lab2/index.html">Lab 2</a>
         <a href="lab3/index.html">Lab 3</a>
-        <a href="lab4/">Lab 4</a>
+        <a href="lab4/index.html">Lab 4</a>
     </div>
 
 </body>
