--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            gap: 40px;
         }
 
         .menu {
@@ -19,10 +20,13 @@
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 0 20px rgba(0,0,0,.5);
+            width: 280px;
         }
 
         h1 {
             margin-bottom: 20px;
+            font-size: 20px;
+            text-align: center;
         }
 
         a {
@@ -34,6 +38,7 @@
             margin-bottom: 10px;
             border-radius: 6px;
             text-align: center;
+            transition: 0.3s;
         }
 
         a:hover {
@@ -44,12 +49,20 @@
 </head>
 <body>
 
+    <!-- MENU LAB -->
     <div class="menu">
         <h1>📁 CSS Animation Labs</h1>
-        <a href="lab1/index.html">Lab 1</a>
-        <a href="lab2/index.html">Lab 2</a>
-        <a href="lab3/index.html">Lab 3</a>
-        <a href="lab4/index.html">Lab 4</a>
+        <a href="lab1/">Lab 1 – Hover & Transition</a>
+        <a href="lab2/">Lab 2 – Animation & Keyframes</a>
+        <a href="lab3/">Lab 3 – Coming soon</a>
+    </div>
+
+    <!-- MENU BÀI TẬP LỚN -->
+    <div class="menu">
+        <h1>Bài Tập Lớn</h1>
+        <a href="baitaplon/bt1/">Bài tập lớn 1</a>
+        <a href="baitaplon/bt2/">Bài tập lớn 2</a>
+        <a href="baitaplon/bt3/">Bài tập lớn 3</a>
     </div>
 
 </body>
