--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
     <!-- MENU LAB -->
     <div class="menu">
         <h1>📁 CSS Animation Labs</h1>
-        <a href="lab1/">Lab 1 – Hover & Transition</a>
-        <a href="lab2/">Lab 2 – Animation & Keyframes</a>
-        <a href="lab3/">Lab 3 – Coming soon</a>
+        <a href="lab1/index.html">Lab 1 – Hover & Transition</a>
+        <a href="lab2/index.html">Lab 2 – Animation & Keyframes</a>
+        <a href="lab3/index.html">Lab 3 – Coming soon</a>
     </div>
 
     <!-- MENU BÀI TẬP LỚN -->
     <div class="menu">
         <h1>Bài Tập Lớn</h1>
-        <a href="baitaplon/bt1/">Bài tập lớn 1</a>
-        <a href="baitaplon/bt2/">Bài tập lớn 2</a>
-        <a href="baitaplon/bt3/">Bài tập lớn 3</a>
+        <a href="project/index.html">Bài tập lớn 1</a>
+        <a href="project/">Bài tập lớn 2</a>
+        <a href="project/">Bài tập lớn 3</a>
     </div>
 
 </body>
