--- a/A/index.html
+++ b/A/index.html
@@ -62,7 +62,9 @@
     <div class="menu">
         <h1>Bài Tập</h1>
         <a href="project/index.html">Assigment</a>
+        <a href="miniproject4_Kn/index.html">mini project</a>
     </div>
 
 </body>
+
 </html>
